fixed section 2 div whitespace using flexbox

--- a/less/index.less
+++ b/less/index.less
@@ -230,6 +230,10 @@ li {
 	margin: 20px auto;
 	.spacing-between();
 
+	h2 {
+		padding-bottom: 14px;
+	}
+
 	@media(max-width: 500px) {
 		display: flex;
 		flex-wrap: wrap;
@@ -245,6 +249,7 @@ li {
 		@media(max-width: 500px) {
 			width: 100%;
 			justify-content: center;
+			align-content: flex-start;
 		}
 
 		ul {
